@@ -1,0 +1,8 @@
+Title: mk_inventory: windows inventory check now included, install date added to data
+Level: 2
+Component: inv
+Version: 1.2.5i3
+Date: 1399558285
+Class: feature
+
+
