@@ -36,11 +36,12 @@
 
 def inv_win_wmi_software(info):
     paclist = inv_tree("software.packages:")
-    for pacname, vendor, version in info:
+    for pacname, vendor, version, install_date in info:
         entry = {
             "name"            : pacname,
             "version"         : version,
             "vendor"          : vendor,
+            "install_date"    : install_date,
             "package_type"    : "wmi",
         }
         paclist.append(entry)
