@@ -111,6 +111,7 @@
 
     HW/SW-Inventory:
     * 0913 lnx_distro: Now able to detect SuSE distributions...
+    * 0610 mk_inventory: windows inventory check now included, install date added to data
     * 0886 FIX: Fix exception on non-UTF-8 encoded characters in software list
 
 
